# riposte

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile.toml  README.md  conanfile.txt  regenProto.sh
assets/: index.json
c-bindings/: Cargo.toml  cbindgen.toml  generateBindings.sh
c-bindings/include/: riposte_networking.h
c-bindings/src/: lib.rs
client/: Cargo.toml  inspect.lua  lua_networking.cpp  lua_networking.h  main.cpp  main.lua  menu_music.lua  networking.lua  recompileUI.sh  scheduler.lua  style.yml  task_sequence.lua  utils.lua
client/game/: city.lua  client.lua  combat.lua  event.lua  game.lua  music.lua  player.lua  renderer.lua  sounds.lua  stack.lua  unit.lua  view.lua
client/game/render/: improvement.lua  tile.lua
client/game/ui/: city_hud.lua  dialogue.lua  hud.lua  info_text.lua  main_hud.lua  messages.lua  prompts.lua  selection.lua  tile_info.lua  unit_actions.lua
client/protocol/: Cargo.toml  build.rs
client/protocol/src/: lib.rs
client/src/: assets.rs  audio.rs  backend.rs  client.rs  context.rs  event_loop.rs  fair_random.rs  game.rs  generated.rs  lobby.rs  main.rs  options.rs  paths.rs  registry.rs  renderer.rs  saveload.rs  server_bridge.rs  state.rs  states.rs  tooltips.rs  ui.rs  utils.rs  volumes.rs
client/src/game/: city.rs  culture.rs  event.rs  improvement.rs  path.rs  player.rs  selection.rs  stack.rs  tile.rs  unit.rs  view.rs  world.rs
client/src/registry/: building.rs  civ.rs  resource.rs  tech.rs  unit_kind.rs
client/src/renderer/: city.rs  city_worked_tiles.rs  cultural_border.rs  fog.rs  grid_overlay.rs  improvement.rs  resource.rs  staged_path.rs  status_text.rs  terrain.rs  tile_yield.rs  tree.rs  unit.rs
client/src/states/: game.rs  lobby.rs  main_menu.rs  menu.rs
client/src/states/game/: city_screen.rs  main_ui.rs  music.rs  prompts.rs  sounds.rs
client/src/states/game/city_screen/: culture.rs  economy.rs  info_bar.rs  resources.rs
client/src/states/game/main_ui/: economy.rs  info_bar.rs  research.rs  turn_indicator.rs  unit_actions.rs  unit_info.rs
client/src/states/game/prompts/: city_build.rs
client/src/states/menu/: login.rs  main_menu.rs  options.rs  saves_list.rs
client/src/tooltips/: building.rs  happiness.rs  health.rs  improvement.rs  resource.rs  sickness.rs  tech.rs  tile.rs  unhappiness.rs  unit.rs
client/src/ui/: flashing_button.rs  turn_indicator.rs  unit_indicator.rs
client/ui/: lobby.lua  main_menu.lua  saves_list.lua  server_list.lua  style.lua  utils.lua
client/ui/game/: city_build_prompt.yml  info_bar.yml  research_bar.yml  research_prompt_option.yml  unit_action.yml  unit_info.yml  unit_selection_bar.yml  unit_selector.yml
client/ui/game/city_screen/: buildings.yml  culture.yml  economy.yml  resources.yml
client/ui/lobby/: lobby.yml
client/ui/main_menu/: background.yml
client/ui/menu/lobby/: lobby.yml
client/ui/menu/login/: login.yml
client/ui/menu/main_menu/: entry.yml  main_menu.yml  user_bar.yml
crates/backend/: Cargo.toml  architecture.md
crates/backend/api/: Cargo.toml  build.rs
crates/backend/api/src/: client.rs  lib.rs  server.rs
crates/backend/src/: hub.rs  main.rs  repository.rs  server.rs
crates/backend/src/models/: user.rs
crates/backend/src/repository/: postgres.rs
crates/client/: Cargo.toml  style.yml
crates/client/protocol/: build.rs
crates/client/src/: asset_loaders.rs  assets.rs  audio.rs  backend.rs  client.rs  context.rs  event_loop.rs  game.rs  generated.rs  lobby.rs  main.rs  popups.rs  renderer.rs  saveload.rs  server_bridge.rs  states.rs  tooltips.rs  ui.rs  utils.rs  volumes.rs
crates/client/src/assets/: loaders.rs
crates/client/src/context/: init.rs
crates/client/src/game/: city.rs  combat.rs  event.rs  id_mapper.rs  path.rs  player.rs  selection.rs  stack.rs  tile.rs  unit.rs  view.rs  world.rs
crates/client/src/registry/: building.rs  civ.rs
crates/client/src/renderer/: city.rs  city_worked_tiles.rs  cultural_border.rs  fog.rs  grid_overlay.rs  improvement.rs  resource.rs  rivers.rs  staged_path.rs  status_text.rs  terrain.rs  tile_yield.rs  tree.rs  unit.rs
crates/client/src/states/: game.rs  lobby.rs  menu.rs
crates/client/src/states/game/: city_screen.rs  main_ui.rs  music.rs  prompts.rs  sounds.rs
crates/client/src/states/menu/: login.rs  main_menu.rs  options.rs  saves_list.rs  server_list.rs
crates/client/src/tooltips/: building.rs  happiness.rs  health.rs  improvement.rs  resource.rs  sickness.rs  tech.rs  tile.rs  unhappiness.rs  unit.rs
crates/client/src/ui/: flashing_button.rs  unit_indicator.rs
crates/client/ui/game/: city_build_prompt_option.yml  economy.yml  player_score.yml  research_bar.yml  research_prompt.yml  scores.yml  tile_tooltip.yml  turn_indicator.yml  unit_action_bar.yml
crates/client/ui/game/city_screen/: buildings_entry.yml  culture.yml  info_bar.yml  resources.yml  resources_entry.yml
crates/client/ui/lobby/: lobby.yml
crates/client/ui/menu/: saves.yml  server_list.yml
crates/client/ui/menu/login/: register.yml
crates/client/ui/menu/main_menu/: main_menu.yml
crates/client/ui/popup/: error.yml  genesis.yml  tech.yml
crates/common/: Cargo.toml
crates/common/src/: assets.rs  bridge.rs  game.rs  lib.rs  lobby.rs  mapgen.rs  poisson.rs  protocol.rs  registry.rs  saveload.rs  types.rs  utils.rs
crates/common/src/game/: city.rs  combat.rs  culture.rs  event.rs  improvement.rs  player.rs  river.rs  tile.rs  unit.rs  worker.rs  world.rs
crates/common/src/protocol/: lobby.rs
crates/common/src/registry/: building.rs  civ.rs  resource.rs  tech.rs  unit_kind.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/lobby/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: connection.rs  game.rs  game_server.rs  lib.rs  lobby.rs  lobby_server.rs  mapgen.rs
crates/server/src/game/: city.rs  event.rs  player.rs  tile.rs  unit.rs
crates/server/src/mapgen/: land.rs  resources.rs  starting_locations.rs  terrain.rs
launcher/: Cargo.toml
launcher/assets/: root.yml
launcher/src/: generated.rs  main.rs
(+291 files in other folders)
