[workspace]
members = [
    "crates/backend",
    "crates/backend/api",
    "crates/bundler",
    "crates/client",
    "crates/common",
    "crates/launcher",
    "crates/server",
]

resolver = "2"

# Build dependencies in release mode for better debug performance.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
slotmap = { git = "https://github.com/orlp/slotmap" }

#[patch."https://github.com/caelunshun/dume"]
#dume = { path = "../dume/crates/dume" }
# dume-video = { path = "../dume/crates/dume-video" }

# [patch."https://github.com/caelunshun/duit"]
# duit = { path = "../duit/crates/duit" }
# duit-core = { path = "../duit/crates/duit-core" }
# duit-platform = { path = "../duit/crates/duit-platform" }
