[package]
name = "riposte-c-bindings"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Networking
anyhow = "1"
bytes = "1"
flume = "0.10"
futures = "0.3"
riposte-backend-api = { path = "../backend/api" }
slotmap = "1"
tokio = { version = "1", features = [ "full" ] }

# Path rendering used for mapgen
zeno = "0.2"
