[package]
name = "riposte"
version = "0.1.0"
edition = "2018"

default-run = "riposte"

[dependencies]
ahash = { version = "0.7", features = [ "serde" ] }
anyhow = "1"
arrayvec = { version = "0.7", features = [ "serde" ] }
bytes = "1"
directories-next = "2"
duit = { path = "/Users/caelum/dev/duit/crates/duit" }
duit-core = { path = "/Users/caelum/dev/duit/crates/duit-core" }
dume = { path = "/Users/caelum/dev/dume/renderer", package = "dume-renderer" }
flume = "0.10"
fs-err = "2"
futures = "0.3"
glam = "0.17"
indexmap = "1"
log = "0.4"
once_cell = "1"
pollster = "0.2"
prost = "0.8"
prost-types = "0.8"
protocol = { path = "protocol", package = "riposte-protocol" }
riposte-backend-api = { path = "../backend/api" }
rodio = { version = "0.14", default-features = false, features = [ "vorbis", "wav" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
simple_logger = "1"
slotmap = "1"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = [ "serde" ] }
walkdir = "2"
wgpu = "0.10"
winit = "0.25"
