[package]
name = "riposte-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
ahash = "0.7"
anyhow = "1"
async-backplane = "0.1"
argon2 = "0.2"
bytes = "1"
deadpool = "0.8"
deadpool-postgres = "0.9"
flume = "0.10"
futures = "0.3"
futures-lite = "1"
prost = "0.8"
quinn = "0.7"
rand = "0.8"
rcgen = "0.8"
refinery = { version = "0.6", features = [ "tokio-postgres" ] }
riposte-backend-api = { path = "api" }
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7", features = [ "with-uuid-0_8" ] }
tonic = "0.5"
tower = "0.4"
tower-http = { version = "0.1", features = [ "trace" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = [ "v4" ] }
