[package]
name = "riposte-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
async-backplane = "0.1"
argon2 = "0.3.1"
bytes = "1"
deadpool = "0.9"
deadpool-postgres = "0.10"
flume = "0.10"
futures = "0.3"
futures-lite = "1"
prost = "0.9"
quinn = "0.8"
rand = "0.8"
refinery = { version = "0.7", features = [ "tokio-postgres" ] }
riposte-backend-api = { path = "api" }
rustls = "0.20"
rustls-pemfile = "0.2"
subtle = "2"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7", features = [ "with-uuid-0_8" ] }
tonic = { version = "0.6", features = [ "tls" ] }
tower = "0.4"
tower-http = { version = "0.2", features = [ "trace" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = [ "v4" ] }
