[package]
name = "riposte-common"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
arrayvec = { version = "0.7", features = [ "serde" ] }
bincode = "1"
flume = "0.10"
fs-err = "2"
glam = "0.17"
indexmap = "1"
log = "0.4"
quinn = "0.7"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
slotmap = "1"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
uuid = "0.8"
