[package]
name = "riposte-common"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.7", features = [ "serde" ] }
anyhow = "1"
arrayvec = { version = "0.7", features = [ "serde" ] }
bincode = "1"
flume = "0.10"
fs-err = "2"
glam = { version = "0.17", features = [ "serde" ] }
indexmap = { version = "1", features = [ "serde-1" ] }
lexical = "6"
log = "0.4"
once_cell = "1"
rand = "0.8"
rand_pcg = "0.3"
riposte-backend-api = { path = "../backend/api" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
slotmap = { version = "1", features = [ "serde" ] }
strum = { version = "0.23", features = [ "derive" ] }
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = [ "serde" ] }
zstd = "0.10"

[dev-dependencies]
image = { version = "0.23", default-features = false, features = [ "png" ] }
