[package]
name = "lobby"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1"
bytes = "1"
flume = "0.10"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
simple_logger = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
