[package]
name = "riposte-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
fs-err = "2"
glam = "0.17"
quinn = "0.7"
rand = "0.8"
rand_pcg =   "0.3"
riposte-backend-api = { path = "../backend/api" }
riposte-common = { path = "../common" }
slotmap = "1"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
uuid = "0.8"
