[package]
name = "riposte-backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
prost = "0.9"
quinn = "0.8"
tokio-util = { version = "0.6", features = [ "codec" ] }
tonic = { version = "0.6", features = [ "tls", "tls-roots" ] }
uuid = "0.8"

[build-dependencies]
tonic-build = "0.6"
